--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,43 @@ form .root {
     margin-top: 1.5rem;
     display: flex;
     justify-content: center;
-    background-color: #8C153E;
-    color: #DAD8C3;
+    /* background-color: #8C153E; */
+    color: #8C153E;
     border-radius: 0.3rem;
     padding: 0.5rem 0 0.5rem 0;
+}
+
+form .root .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem 1rem;
+}
+
+form .root .container .card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #8C153E;
+    color:#DAD8C3;
+    border-radius: 8px;
+    padding: 0.5rem 0.2rem;
+    height: 10rem;
+    box-shadow: #80808073 5px 4px
+}
+
+form .root .container .card img {
+    height: 5rem;
+    width: 5rem;
+}
+
+form .root .container .card .content {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+form .root .container .card .content .ele2 {
+    display: flex;
+    flex-direction: column;
 }
