--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,34 @@
 * {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 28px;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+header {
+    background-color: #8c153f7a;
+}
+
+h2 {
+    text-align: center;
+    color: #ecebe1;
+    padding: 1rem 0;
+    margin: 0 0 2rem 0;
+}
+
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
     background-color: #ecebe1;
 }
 
 form {
-    position: absolute;
-    top: 20%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: stretch;
-    align-content: center;
-}
-
-form h2 {
-    margin-bottom: 2rem;
-    text-align: center;
-    color: #8c153e;
+    align-items: center;
 }
 
 form input {
+    font-size: 18px;
+    height: 2rem;
     border-radius: 0.3rem;
     border: 0.5px solid #DAD8C3;
     outline: none;
@@ -39,18 +36,21 @@ form input {
 }
 
 form input[type="text"] {
-    padding: 0.2rem 0.3rem;
+    padding: 0.1rem 0.2rem;
 }
 
 form button {
-    margin-top: 1rem;
+    border: 1px solid #8c153e;
+    font-size: 18px;
+    width: 5rem;
+    height: 2rem;
     background-color: #DAD8C3;
     color: #8c153e;
     outline: none;
-    border: none;
     border-radius: 1rem;
     cursor: pointer;
     padding: 0.2rem 0.3rem;
+    margin: 0 0 0 1rem;
 }
 
 form button:hover {
@@ -58,7 +58,7 @@ form button:hover {
     color: #DAD8C3;
 }
 
-form .root {
+.root {
     margin-top: 1.5rem;
     display: flex;
     justify-content: center;
@@ -68,37 +68,56 @@ form .root {
     padding: 0.5rem 0 0.5rem 0;
 }
 
-form .root .container {
+.root .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem 1rem;
 }
 
-form .root .container .card {
+.root .container .card {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
     background-color: #8C153E;
-    color:#DAD8C3;
+    color: #DAD8C3;
     border-radius: 8px;
     padding: 0.5rem 0.2rem;
-    height: 10rem;
-    box-shadow: #80808073 5px 4px
+    max-height: min-content;
+    box-shadow: #8c153e8c 5px 4px;
+    flex-direction: column;
+    align-items: center;
 }
 
-form .root .container .card img {
+.root .container .card img {
     height: 5rem;
     width: 5rem;
 }
 
-form .root .container .card .content {
+.root .container .card .content {
     display: flex;
-    justify-content: space-between;
     width: 90%;
+    margin: 0 5px;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
-form .root .container .card .content .ele2 {
+.root .container .card .content .ele1 {
+    max-width: min-content;
+}
+
+.root .container .card .content .ele2 {
     display: flex;
     flex-direction: column;
+}
+
+.root .container .card .content .ele2 span {
+    font-size: bold;
+    margin: 0.5rem 0 0 0;
+}
+
+.root .container .card .content .ele2 .span1::before {
+    content: "Stars: ";
+}
+
+.root .container .card .content .ele2 .span2::before {
+    content: "Issues: ";
 }
